write about how to choose an algorithm/model

--- a/projects/p1_charityml/finding_donors.ipynb
+++ b/projects/p1_charityml/finding_donors.ipynb
@@ -959,7 +959,146 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "## Response to Question 2.\n",
+    "\n",
+    "### Support Vector Machine\n",
+    "\n",
+    " -  Describe one real-world application in industry where the\n",
+    "    model can be applied.\n",
+    "    \n",
+    "    Support Vector Machines have found application in text processing.\n",
+    "    \n",
+    "    ***\n",
+    "\n",
+    "    Project Euclid: Mathematics and Statistics Online\n",
+    "\n",
+    "    Statistical Science\n",
+    "\n",
+    "    Volume 21, Number 3 (2006), 322--336.\n",
+    "\n",
+    "    *Support Vector Machines with Applications*\n",
+    "\n",
+    "    Javier M. Moguerza and Alberto Muñoz\n",
+    "\n",
+    "    [Project Euclid](https://projecteuclid.org/euclid.ss/1166642435)\n",
+    "\n",
+    "    \n",
+    " - What are the strengths of the model; when does it perform well?\n",
+    " \n",
+    "   We can define non-linear boundaries between domains. It might be easier with this      algorithm than with some others to avoid overfitting. We can try a variety of kernels with our SVM.\n",
+    "   \n",
+    "   ***\n",
+    "\n",
+    "   *Elite Data Science: Modern Machine Learning Algorithms: Strengths and Weaknesses*\n",
+    "\n",
+    "\n",
+    "   [Elite Data Science](https://elitedatascience.com/machine-learning-algorithms)\n",
+    "\n",
+    "\n",
+    " - What are the weaknesses of the model; when does it perform poorly?\n",
+    " \n",
+    "   We might need a large amount of memory for our SVM. The algorithm does not scale well. The use of a variety of kernels with our SVM might complicate our efforts to tune our model.\n",
+    "\n",
+    "   ***\n",
+    "\n",
+    "   *Modern Machine Learning Algorithms: Strengths and Weaknesses*\n",
+    "   \n",
+    "   ***\n",
+    "\n",
+    "   In a posting on Quora, Luis Argerich (Data Science professor at the University of Buenos Aires) tells us that support vector machines will not work well when the data set is large and when the data is not linearly separable. \n",
+    "   \n",
+    "   ***\n",
+    "\n",
+    "  [Quora Post](https://elitedatascience.com/machine-learning-algorithms)\n",
+    "\n",
+    " \n",
+    " - What makes this model a good candidate for the problem, given\n",
+    "    what you know about the data?\n",
+    " \n",
+    "### Random Forest\n",
+    "\n",
+    " -  Describe one real-world application in industry where the\n",
+    "    model can be applied.\n",
+    "    \n",
+    "    Belgiu and Dragut report on the use of the random forest algorithm to classify objects detected through remote sensing. Maybe random forests can recognize the kinds of forests that include coniferous and deciduous trees!\n",
+    "\n",
+    "    *Random forest in remote sensing: A review of applications and future directions*\n",
+    "\n",
+    "    Mariana Belgiua Lucian Drăguţ\n",
+    "\n",
+    "    ISPRS Journal of Photogrammetry and Remote Sensing\n",
+    " \n",
+    "    Volume 114, April 2016, Pages 24-31\n",
+    "\n",
+    "\n",
+    " - What are the strengths of the model; when does it perform well?\n",
+    " \n",
+    "   According to Waleed Kadous (PhD in machine learning and artificial intelligence), by variance and overfitting are less likely with the random forest model than they are with decision trees.\n",
+    "\n",
+    "   [Quora: Some advantages...](https://www.quora.com/What-are-some-advantages-of-using-a-random-forest-over-a-decision-tree-given-that-a-decision-tree-is-simpler)\n",
+    "\n",
+    "\n",
+    " - What are the weaknesses of the model; when does it perform poorly?\n",
+    " \n",
+    "   Waleed Kadous says that the results are ``incomprehensible.'' By this he means, that the results are difficult to interpret.\n",
+    "\n",
+    "   According to Naresh Kumar (writing on his blog, *The Professionals Point*), the construction of a random forest model requires more computation and longer training times than does a decision tree model.\n",
+    "\n",
+    "  [The Professionals Point](https://theprofessionalspoint.blogspot.com/2019/02/advantages-and-disadvantages-of-random.html)\n",
+    "\n",
+    " \n",
+    " -  What makes this model a good candidate for the problem, given\n",
+    "    what you know about the data?\n",
+    "\n",
+    "### Logistic Regression\n",
+    "\n",
+    " -  Describe one real-world application in industry where the\n",
+    "    model can be applied.\n",
+    "    \n",
+    "    A company can use logistic regression to estimate the probability that a visitor to the company's website will purchase a product that the company advertises at a special price on the website.\n",
+    "\n",
+    "    ***\n",
+    "    \n",
+    "    [IBM: Logistic regression: Predict outcomes and make better decisions](https://www.ibm.com/analytics/learn/logistic-regression)\n",
+    "\n",
+    "\n",
+    " - What are the strengths of the model; when does it perform well?\n",
+    "\n",
+    "   Logistic regression is efficient (does not require much computation), its results are easily interpreted, and it does not require tuning or scaling of features.\n",
+    "\n",
+    "   ***\n",
+    "   \n",
+    "   *Real world implementation of Logistic Regression*\n",
+    "\n",
+    "   Nagesh Singh Chauhan\n",
+    "\n",
+    "   Mar 11, 2019 \n",
+    "\n",
+    "   [Medium: Towards Data Science](https://towardsdatascience.com/real-world-implementation-of-logistic-regression-5136cefb8125)\n",
+    "   \n",
+    "   ***\n",
+    "\n",
+    "   A business can use logistic regression to discover patterns and relationships in data. It can use this information to modify its way of working for greater advantage in the market.\n",
+    "\n",
+    "   ***\n",
+    "   \n",
+    "  [IBM: Logistic regression: Predict outcomes and make better decisions](https://www.ibm.com/analytics/learn/logistic-regression)\n",
+    "\n",
+    "\n",
+    " - What are the weaknesses of the model; when does it perform poorly?\n",
+    " \n",
+    "    Logistic regression cannot solve non-linear problems. It performs poorly if features are correlated with one another and if features are not correlated with the target variable.\n",
+    "\n",
+    "    Logistic regression is not well-suited for the prediction of continuous outcomes.\n",
+    "It works well when the question to be answered has the form ``yes/no'' or ``this/that,'' and less well when the question\n",
+    "has the form ``how much?''\n",
+    "\n",
+    "   [IBM: Logistic regression: Predict outcomes and make better decisions](https://www.ibm.com/analytics/learn/logistic-regression)\n",
+    "\n",
+    " \n",
+    " -  What makes this model a good candidate for the problem, given\n",
+    "    what you know about the data?\n",
+    " "
    ]
   },
   {
