create a training and predicting pipeline

--- a/projects/p1_charityml/finding_donors.ipynb
+++ b/projects/p1_charityml/finding_donors.ipynb
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -466,7 +466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -700,7 +700,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -801,7 +801,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -886,14 +886,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'numpy.float64'> 0.2478439697492371\n",
       "Naive Predictor: [Accuracy score: 0.2478, F-score: 0.2917]\n"
      ]
     }
@@ -1014,6 +1013,9 @@
     " \n",
     " - What makes this model a good candidate for the problem, given\n",
     "    what you know about the data?\n",
+    "    \n",
+    "    Ours is a classification problem, not a regression problem. Our dataset is not very large. It contains a mix of continuous and categorical variables.\n",
+    "\n",
     " \n",
     "### Random Forest\n",
     "\n",
@@ -1049,6 +1051,9 @@
     " \n",
     " -  What makes this model a good candidate for the problem, given\n",
     "    what you know about the data?\n",
+    "    \n",
+    "    Ours is a classification problem, not a regression problem. Our dataset is not very large. It contains a mix of continuous and categorical variables.\n",
+    "\n",
     "\n",
     "### Logistic Regression\n",
     "\n",
@@ -1090,14 +1095,17 @@
     "    Logistic regression cannot solve non-linear problems. It performs poorly if features are correlated with one another and if features are not correlated with the target variable.\n",
     "\n",
     "    Logistic regression is not well-suited for the prediction of continuous outcomes.\n",
-    "It works well when the question to be answered has the form ``yes/no'' or ``this/that,'' and less well when the question\n",
-    "has the form ``how much?''\n",
+    "It works well when the question to be answered has the form yes/no or this/that, and less well when the question\n",
+    "has the form how much?\n",
     "\n",
     "   [IBM: Logistic regression: Predict outcomes and make better decisions](https://www.ibm.com/analytics/learn/logistic-regression)\n",
     "\n",
     " \n",
     " -  What makes this model a good candidate for the problem, given\n",
     "    what you know about the data?\n",
+    "    \n",
+    "    Ours is a classification problem, not a regression problem. Our dataset is not very large. It contains a mix of continuous and categorical variables.\n",
+    "\n",
     " "
    ]
   },
@@ -1119,13 +1127,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 13,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# TODO: Import two metrics from sklearn - fbeta_score and accuracy_score\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import fbeta_score\n",
     "\n",
     "def train_predict(learner, sample_size, X_train, y_train, X_test, y_test): \n",
     "    '''\n",
@@ -1142,33 +1150,33 @@
     "    \n",
     "    # TODO: Fit the learner to the training data using slicing with 'sample_size' using .fit(training_features[:], training_labels[:])\n",
     "    start = time() # Get start time\n",
-    "    learner = None\n",
+    "    learner = learn.fit( X_train, y_train ) # LHT 17 Mar 2020\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the training time\n",
-    "    results['train_time'] = None\n",
+    "    results['train_time'] = end - start # LHT 17 Mar 2020\n",
     "        \n",
     "    # TODO: Get the predictions on the test set(X_test),\n",
     "    #       then get predictions on the first 300 training samples(X_train) using .predict()\n",
     "    start = time() # Get start time\n",
-    "    predictions_test = None\n",
-    "    predictions_train = None\n",
+    "    predictions_test = learner.predict( X_test ) # LHT 17 Mar 2020\n",
+    "    predictions_train = learner.predict( X_train[:300] ) # LHT 17 Mar 2020\n",
     "    end = time() # Get end time\n",
     "    \n",
     "    # TODO: Calculate the total prediction time\n",
-    "    results['pred_time'] = None\n",
+    "    results['pred_time'] = end - start # LHT 17 Mar 2020\n",
     "            \n",
     "    # TODO: Compute accuracy on the first 300 training samples which is y_train[:300]\n",
-    "    results['acc_train'] = None\n",
+    "    results['acc_train'] = accuracy_score( predictions_train, y_train[:300]) # LHT\n",
     "        \n",
     "    # TODO: Compute accuracy on test set using accuracy_score()\n",
-    "    results['acc_test'] = None\n",
+    "    results['acc_test'] = accuracy_score( predictions_test, y_test ) #LHT\n",
     "    \n",
     "    # TODO: Compute F-score on the the first 300 training samples using fbeta_score()\n",
-    "    results['f_train'] = None\n",
+    "    results['f_train'] = fbeta_score( predictions_train, y_train[:300], beta = 0.5 ) # LHT\n",
     "        \n",
     "    # TODO: Compute F-score on the test set which is y_test\n",
-    "    results['f_test'] = None\n",
+    "    results['f_test'] =fbeta_score( predictions_test, y_test, beta = 0.5 ) # LHT\n",
     "       \n",
     "    # Success\n",
     "    print(\"{} trained on {} samples.\".format(learner.__class__.__name__, sample_size))\n",
